--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 </head>
 
 <body style="background-color: #EFEFEF;">
-    <div class="jumbotron" style="background-image: url(&quot;assets/img/computer.jpg&quot;);background-size: cover;width: auto;height: 730px;background-position: center;background-repeat: no-repeat;">
-        <h1 class="text-center d-flex flex-grow-1 flex-shrink-1 flex-fill justify-content-center align-items-center align-content-center align-self-center order-2 m-auto" style="color: #EFEFEF;font-family: 'Lexend Deca', sans-serif;margin-bottom: auto;margin-top: auto;height: 570px;">Welkom</h1>
-        <p class="text-center" style="color: #EFEFEF;width: auto;">Dit is mijn cv website</p>
+    <div class="jumbotron order-1" style="background-image: url(&quot;assets/img/computer.jpg&quot;);background-size: cover;width: auto;height: 730px;background-position: center;background-repeat: no-repeat;">
+        <h1 class="text-center d-flex d-xl-flex justify-content-center align-items-end justify-content-xl-center align-items-xl-end" style="color: #EFEFEF;font-family: 'Lexend Deca', sans-serif;margin-bottom: auto;margin-top: auto;height: 285px;">Welkom</h1>
+        <p class="text-center d-xl-flex justify-content-xl-center align-items-xl-start" style="color: #EFEFEF;width: auto;height: 285px;">Dit is mijn cv website</p>
     </div>
     <div style="margin-top: 30px;">
         <div class="container">
