--- a/index.html
+++ b/index.html
@@ -8,88 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 </head>
 
-<body style="background-color: #EFEFEF;">
-    <div class="jumbotron order-1" style="background-image: url(&quot;assets/img/computer.jpg&quot;);background-size: cover;width: auto;height: 730px;background-position: center;background-repeat: no-repeat;">
-        <h1 class="text-center d-flex d-xl-flex justify-content-center align-items-end justify-content-xl-center align-items-xl-end" style="color: #EFEFEF;font-family: 'Lexend Deca', sans-serif;margin-bottom: auto;margin-top: auto;height: 285px;">Welkom</h1>
-        <p class="text-center d-xl-flex justify-content-xl-center align-items-xl-start" style="color: #EFEFEF;width: auto;height: 285px;">Dit is mijn cv website</p>
-    </div>
-    <div style="margin-top: 30px;">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-8">
-                    <h1 style="font-family: 'Lexend Deca', sans-serif;">Over Mij</h1>
-                    <p>Mijn naam is Dennis, ik ben een doorzetter die het leuk vindt om in een team te werken.<br> Daarnaast kan ik ook prima zelfstandig werken. Ik werk doelgericht en ben graag anderen van dienst.<br> De komende jaren wil ik mijn ervaring
-                        verder uitbouwen en zoveel mogelijk leren.<br></p>
-                    <hr>
-                    <h1 style="font-family: 'Lexend Deca', sans-serif;">Certificaten</h1>
-                    <p>Behaald:<br>98-383:MTA: Programming using HTML and CSS</p>
-                    <hr>
-                </div>
-                <div class="col-md-4">
-                    <h1 style="font-family: 'Lexend Deca', sans-serif;">Vaardigheden</h1>
-                    <p style="margin-bottom: 15px;">Dit zijn mijn coderingsvaardigheden. Ik heb nog veel te leren van die talen, maar het gaat tot nu toe goed met mijn progressie.</p><strong>Python</strong>
-                    <div class="progress" style="margin-bottom: 10px;">
-                        <div class="progress-bar bg-info" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">60%</div>
-                    </div><strong>HTML &amp; CSS</strong>
-                    <div class="progress" style="margin-bottom: 10px;">
-                        <div class="progress-bar bg-info" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%;">70%</div>
-                    </div><strong>C#</strong>
-                    <div class="progress" style="margin-bottom: 10px;">
-                        <div class="progress-bar bg-info" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">50%</div>
-                    </div>
-                    <hr>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-8" style="margin-bottom: 30px;">
-                    <h1 style="font-family: 'Lexend Deca', sans-serif;">Education</h1>
-                    <h4>VMBO Theoretisch</h4>
-                    <p style="font-style: oblique;font-weight: normal;">Compaen VMBO 2015 - 2019</p>
-                    <h4>Excellent student Applicatieontwikkelaar&nbsp;</h4>
-                    <p style="font-style: oblique;font-weight: normal;">Regio College Zaandam 2019 - heden</p>
-                    <hr>
-                </div>
-                <div class="col-md-4">
-                    <h1 style="font-family: 'Lexend Deca', sans-serif;">Talen</h1>
-                    <p style="margin-bottom: 10px;">Nederlands: Moedertaal</p>
-                    <div class="progress" style="margin-bottom: 10px;">
-                        <div class="progress-bar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">90%</div>
-                    </div>
-                    <p style="margin-bottom: 10px;">Engels: Tweede taal</p>
-                    <div class="progress" style="margin-bottom: 10px;">
-                        <div class="progress-bar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">80%</div>
-                    </div>
-                    <hr>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="highlight-blue">
-        <div class="container">
-            <div class="intro">
-                <h2 class="text-center">Highlight</h2>
-                <p class="text-center">Wat je ook doet, hoe groot de drang ook is,</p>
-                <p class="text-center" style="margin-top: -14px;">dus ja hier heb je een mooie knop die niks doet.</p>
-            </div>
-            <div class="buttons"><a class="btn btn-primary" role="button" href="#">doe maar wat</a></div>
-        </div>
-    </div>
-    <div style="margin-top: 65px;"></div>
-    <div></div>
-    <div></div>
-    <div class="footer-basic" style="background-color: #EFEFEF;">
-        <footer>
-            <div class="social"><a href="https://www.linkedin.com/in/dennis-moes-50b249193/"><i class="icon ion-social-linkedin"></i></a><a href="https://github.com/kingdennis-crypto"><i class="fa fa-github"></i></a></div>
-            <ul class="list-inline text-center">
-                <li class="list-inline-item"><a class="text-center" href="#">Home</a></li>
-            </ul>
-            <p class="copyright">Dennis Moes inc. © 2020</p>
-        </footer>
-    </div>
+<body>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 </body>
 
